--- a/studentrestapi/src/main/resources/application.properties
+++ b/studentrestapi/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 server.servlet.context-path=/studentrestapi
+management.endpoint.health.show-details=always
