--- a/studentrestapi/src/main/resources/application.properties
+++ b/studentrestapi/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql: true
 
 server.servlet.context-path=/studentrestapi
 management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info
